# voice-changer

./: .gitignore  Cargo.toml
crates/audio-engine/: Cargo.toml
crates/audio-engine/src/: device.rs  engine.rs  lib.rs  ring_buffer.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: chain.rs  echo.rs  lib.rs  pitch_shift.rs  reverb.rs  robot.rs  tests.rs
crates/virtual-mic/: Cargo.toml
crates/virtual-mic/src/: lib.rs
crates/voice-conv/: Cargo.toml
crates/voice-conv/src/: content.rs  f0.rs  generator.rs  lib.rs  pipeline.rs  preset.rs  resample.rs
docs/superpowers/specs/: 2026-04-05-portable-zero-config-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  downloader.rs  lib.rs  main.rs  setup.rs
ui/: app.js  index.html  setup-style.css  setup.html  setup.js  style.css
