[workspace]
resolver = "2"
members = [
    "crates/audio-engine",
    "crates/dsp",
    "crates/voice-conv",
    "crates/virtual-mic",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
cpal = "0.15"
ringbuf = "0.4"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
