[workspace]
resolver = "2"
members = [
    "crates/audio-engine",
    "crates/dsp",
    "crates/voice-conv",
    "crates/virtual-mic",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
cpal = "0.15"
ringbuf = "0.4"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tauri = { version = "2", features = [] }
tauri-build = "2"
ort = { version = "2.0.0-rc.12", features = ["coreml"] }
ndarray = "0.17"
rubato = "0.15"
rand = "0.8"
